--- a/6.Count-Reads-with-HTSeq.md
+++ b/6.Count-Reads-with-HTSeq.md
@@ -10,7 +10,10 @@
 ## 理论基础
 在上篇的比对中，我们需要纠结是否真的需要比对，如果你只需要知道已知基因的表达情况，那么可以选择alignment-free工具（例如salmon, sailfish)，如果你需要找到noval isoforms，那么就需要alignment-based工具（如HISAT2, STAR）。到了这一篇的基因（转录本）定量，需要考虑的因素就更加多了，以至于我不知道如何说清才能理清逻辑。
 
-定量分为三个水平，基因水平(gene-level), 转录本水平(transcript-level), 外显子使用水平(exon-usage-level)。
+定量分为三个水平
+- 基因水平(gene-level)
+- 转录本水平(transcript-level)
+- 外显子使用水平(exon-usage-level)。
 
 在**基因水平**上，常用的软件为HTSeq-count，featureCounts，BEDTools, Qualimap, Rsubread, GenomicRanges等。以常用的HTSeq-count为例，这些工具要解决的问题就是根据read和基因位置的overlap判断这个read到底是谁家的孩子。值得**注意**的是不同工具对multimapping reads处理方式也是不同的，例如HTSeq-count就直接当它们不存在。而Qualimpa则是一人一份，平均分配。
 
@@ -26,7 +29,9 @@
 在**外显子使用水平**上，其实和基因水平的统计类似。但是值得注意的是为了更好的计数，我们需要提供无重叠的外显子区域的gtf文件[2]。用于分析差异外显子使用的DEXSeq提供了一个Python脚本（dexseq_prepare_annotation.py）执行这个任务。
 
 ### 小结
+
 计数分为三个水平： gene-level, transcript-level, exon-usage-level
+
 标准化方法： FPKM RPKM TMM TPM
 
 ## 输出表达矩阵
@@ -119,6 +124,7 @@ paste *.txt | awk '{printf $1 "\t";for(i=2;i<=NF;i+=2) printf $i"\t";printf $i}'
 
 ## 简单分析
 这一步需要用到R语言或者是Excel读取数据。
+
 1.导入数据
 ```R
 options(stringsAsFactors = FALSE)
