--- a/6.Count-Reads-with-HTSeq.md
+++ b/6.Count-Reads-with-HTSeq.md
@@ -85,7 +85,7 @@ done
 
 还有人引用了一篇文献 IVT-seq reveals extreme bias in RNA-sequencing 证明不同文库的RNA-Seq结果会存在很大差异。
 
-**结论**： 可以问下原作者他们是如何处理数据的，居然2个重复还能过审。改用小鼠数据进行分析。或者模拟一份数据出来，先把流程走完。然而
+**结论**： 可以问下原作者他们是如何处理数据的，居然有一个居然没有重复的分析也能过审。改用小鼠数据进行分析。或者使用无重复的分析方法，或者模拟一份数据出来，先把流程走完。
 
 
 ## 合并表达矩阵
