--- a/7.Differential-Expression-Analysis.md
+++ b/7.Differential-Expression-Analysis.md
@@ -74,6 +74,7 @@ raw_count_filt$control2 <- control2
 
 线性回归和方差分析是同一时期发展出的两套方法。在我本科阶段的田间统计学课程中就介绍用**方差分析**（ANOVA）分析不同肥料处理后的产量差异，实验设计如下
 
+
 |  肥料 | 重复1  | 重复2 |重复3 |重复4 |
 | - --- | ------- | ------- |---------- |
 |  A1 |  ... |   ... |  ...|  ...  |
@@ -102,13 +103,14 @@ raw_count_filt$control2 <- control2
 
 聊完了线性模型和方差分析，下面的设计矩阵（design matrix）就很好理解了， 其实就是用来告诉不同的差异分析函数应该如何对待变量。比如说我们要研究的KD和control之间变化，设计矩阵就是
 
+<center>
 |  样本 |  处理 |
 | ------------ | ------------ |
 |  sample1 |  control |
 |  sample2 |  control |
 |  sample3 |  KD |
 |  sample4 |  KD |
-
+</center>
 
 那么比较矩阵（contrast matrix)就是告诉差异分析函数应该如何对哪个因素进行比较， 这里就是比较不同处理下表达量的变化。
 
@@ -134,7 +136,7 @@ raw_count_filt$control2 <- control2
 | _tximport_ | _[tximport](http://bioconductor.org/packages/tximport)_ | R/Bioconductor | list of matrices | _DESeqDataSetFromTximport_ |
 | _htseq-count_ | [HTSeq](http://www-huber.embl.de/users/anders/HTSeq) | Python | files | _DESeqDataSetFromHTSeq_ |
 
-本来我们是可以用DESeq2为htseq-count专门提供的 _DESeqDataSetFromHTSeq_ ，然而很尴尬数据不够要自己凑数，所以只能改用 _DESeqDataSetFromMatrix_了 :cold_sweat:
+本来我们是可以用DESeq2为htseq-count专门提供的 _DESeqDataSetFromHTSeq_ ，然而很尴尬数据不够要自己凑数，所以只能改用 _DESeqDataSetFromMatrix_ 了 :cold_sweat:
 
 导入数据，构建 _DESeq2_ 所需的 _DESeqDataSet_ 对象
 ```R
