I need a good rest

--- a/7.Differential-Expression-Analysis.md
+++ b/7.Differential-Expression-Analysis.md
@@ -1,4 +1,6 @@
-# 转录组入门(7)： 差异基因分析
+
+> 这个步骤推荐在R里面做，载入表达矩阵，然后设置好分组信息，统一用DEseq2进行差异分析，当然也可以走走edgeR或者limma的voom流程。
+基本任务是得到差异分析结果，进阶任务是比较多个差异分析结果的异同点。
 
 ## 目录
 * 数据填坑
@@ -7,13 +9,10 @@
 * 探索性分析一二事
 * 使用DESeq2进行差异基因分析
 * 使用edgeR进行差异基因分析
-* 使用limma(voom)进行差异分析
+* 使用limma进行差异基因分析
+  * 不同软件包分析结果比较
 * 使用GFOLD进行无重复样本的差异基因分析
 * 不同差异表达分析的比较
-
-
-> 这个步骤推荐在R里面做，载入表达矩阵，然后设置好分组信息，统一用DEseq2进行差异分析，当然也可以走走edgeR或者limma的voom流程。
-基本任务是得到差异分析结果，进阶任务是比较多个差异分析结果的异同点。
 
 ## 数据填坑
 原先三个样本的HTSeq-count计数的数据可以在我的GitHub中找到，但是前面已经说过Jimmy失误让我们分析的人类就只有3个样本， 另外一个样本需要从另一批数据获取（请注意batch effect)，所以不能保证每一组都有两个重复。
@@ -115,7 +114,7 @@ raw_count_filt$control2 <- control2
 ## 标准化一二事
 其实read count如何标准化的方法有很多，最常用的是FPKM和RPKM，虽然它们其实是错的--[FPKM/RPKM是错的](http://blog.fungenomics.com/2016/07/why-fpkm-and-rpkm-are-wrong.html)。
 
-我推荐阅读 _Comparing the normalization methods for the differential analysis of Illumina high-throughput RNA-Seq data_ ， 了解不同标准化方法之间的差异。
+我推荐阅读 _Comparing the normalization methods for the differential analysis of Illumina high-throughput RNA-Seq data_ , 了解不同标准化方法之间的差异。
 
 有一些方法是要求原始数据，有一些则要求经过某类标准化后的数据，记得区分。
 
@@ -134,7 +133,7 @@ raw_count_filt$control2 <- control2
 | _tximport_ | _[tximport](http://bioconductor.org/packages/tximport)_ | R/Bioconductor | list of matrices | _DESeqDataSetFromTximport_ |
 | _htseq-count_ | [HTSeq](http://www-huber.embl.de/users/anders/HTSeq) | Python | files | _DESeqDataSetFromHTSeq_ |
 
-本来我们是可以用DESeq2为htseq-count专门提供的 _DESeqDataSetFromHTSeq_ ，然而很尴尬数据不够要自己凑数，所以只能改用 _DESeqDataSetFromMatrix_ 了 :cold_sweat:
+本来我们是可以用DESeq2为htseq-count专门提供的 _DESeqDataSetFromHTSeq_ ，然而很尴尬数据不够要自己凑数，所以只能改用 _DESeqDataSetFromMatrix_了 :cold_sweat:
 
 导入数据，构建 _DESeq2_ 所需的 _DESeqDataSet_ 对象
 ```R
@@ -183,7 +182,7 @@ padj                results                            BH adjusted p-values
 ```
 
 用summary看描述性的结果，大致是上调的基因占总体的11%，下调的是7.1%（KD vs control）
-```r
+```
 summary(res)
 out of 29469 with nonzero total read count
 adjusted p-value < 0.1
@@ -226,7 +225,7 @@ with(res[topGene, ], {
 
 当然还有火山图，不过留给其他方法作图，我们先把差异表达的基因找出来。
 ```r
-res.sig <- subset(res, padj < 0.05)
+res.deseq2 <- subset(res, padj < 0.05)
 ```
 
 一般p value 小于0.05就是显著了, 显著性不代表结果正确，只用于给后续的富集分析和GSEA提供排序标准和筛选而已。关于P值的吐槽简直无数， 请多注意。
@@ -283,23 +282,115 @@ genelist.Disp <- estimateDisp(genelist.norm, design, robust = TRUE)
 plotBCV(genelist.Disp)
 ```
 
-还可以进一步通过quasi-likelihood (QL)拓展NB模型，用于解释生物学和技术性导致的基因特异性变异 (Lund et al. 2012; Lun, Chen, and Smyth 2016).
+还可以进一步通过quasi-likelihood (QL)拟合NB模型，用于解释生物学和技术性导致的基因特异性变异 (Lund et al. 2012; Lun, Chen, and Smyth 2016).
 ```r
 fit <- glmQLFit(genelist.Disp, design, robust=TRUE)
 head(fit$coefficients)
 ```
 
+**注1** 估计离散值这个步骤其实有许多`estimate*Disp`函数。当不存在实验设计矩阵(design matrix)的时候，_estimateDisp_ 等价于 _estimateCommonDisp_ 和 _estimateTagwiseDisp_ 。而当给定实验设计矩阵(design matrix)时， _estimateDisp_ 等价于 _estimateGLMCommonDisp_, _estimateGLMTrendedDisp_ 和 _estimateGLMTagwiseDisp_。 其中tag与gene同义。
+
+**注2** 其实这里的第三， 四， 五步对应的就是DESeq2的`DESeq`包含的2步，标准化和离散值估测。
+
+第六步: 差异表达检验（1）。这一步主要构建比较矩阵，类似于DESeq2中的`results`函数的 _contrast_ 参数。
+```r
+cntr.vs.KD <- makeContrasts(control-KD, levels=design)
+res <- glmQLFTest(fit, contrast=cntr.vs.KD)
+ig.edger <- res$table[p.adjust(res$table$PValue, method = "BH") < 0.01, ]
+```
+
+这里用的是`glmQLFTest`而不是`glmLRT`是因为前面用了glmQLTFit进行拟合，所以需要用QL F-test进行检验。如果前面用的是`glmFit`，那么对应的就是`glmLRT`. 作者称QL F-test更加严格。多重试验矫正用的也是BH方法。
+
+后续就是提取显著性差异的基因用作下游分析，做一些图看看
+```r
+topTags(res,n=10)
+is.de <- decideTestsDGE(res)
+summary(is.de)
+plotMD(res, status=is.de, values=c(1,-1), col=c("red","blue"),
+       legend="topright")
+```
+![](http://oex750gzt.bkt.clouddn.com/17-7-20/99793876.jpg)
+
+第六步：差异表达检验（2）。上面找到的显著性差异的基因，没有考虑效应值，也就是具体变化了多少倍。我们也可用找表达量变化比较大的基因，对应的函数是 `glmTreat`。
+```r
+tr <- glmTreat(fit, contrast=B.LvsP, lfc=log2(1.5))
+s
+```
+![](http://oex750gzt.bkt.clouddn.com/17-7-20/49189288.jpg)
 
 
-## 使用limma(voom)进行差异分析
+
+## 使用limma进行差异分析
+经过上面两个方法的洗礼，基本上套路你也就知道了，我先简单小结一下，然后继续介绍limma包的 _voom_ 。
+- 导入read count， 保存为专门的对象用于后续分析
+- 原始数据过滤，根据标准化read count 或者 raw count 作为筛选标准
+- raw read count 标准化
+- 通过各种算法（如经验贝叶斯，EM）预测dispersion离散值
+- 广义线性模型拟合数据
+- 差异分析，也就是统计检验部分
+
+Limma原先用于处理基因表达芯片数据，可是说是这个领域的老大 :sunglasses: 。如果你仔细看edgeR导入界面，你就会发现，edgeR有一部分功能依赖于limma包。Limma采用经验贝叶斯模型（ Empirical Bayesian model）让结果更稳健。
+
+在处理RNA-Seq数据时，raw read count先被转成log2-counts-per-million (logCPM)，然后对mean-variance关系建模。建模有两种方法：
+* 精确权重法（precision weights）也就是“voom"
+* 经验贝叶斯先验趋势（empirical Bayes prior trend），也就是”limma-trend“
+
+**数据预处理**： Limma使用edgeR的DGEList对象，并且过滤方法都是一致的，对应edgeR的第一步,第二步， 第三步
+```
+library(edgeR)
+library(limma)
+group <- factor(c("control","KD","KD","control"))
+genelist <- DGEList(counts=raw_count_filt[,2:5], group = group)
+
+### filter base  use CPM
+keep <- rowSums(cpm(genelist) > 0.5 ) >=2
+table(keep)
+genelist.filted <- genelist[keep, ,keep.lib.sizes=FALSE]
+### normalizaition
+x <- calcNormFactors(x, method = "TMM")
+```
+
+**差异表达分析**: 使用”limma-trend“
+```
+design <- model.matrix(~0+group)
+colnames(design) <- levels(group)
+logCPM <- cpm(genelist.norm, log=TRUE, prior.count=3)
+fit <- lmFit(logCPM, design)
+fit <- eBayes(fit, trend=TRUE)
+topTable(fit, coef=ncol(design))
+```
+
+**差异表达分析**: 使用”limma-voom“
+```
+### DGE with voom
+v <- voom(genelist.norm, design, plot=TRUE)
+#v <- voom(counts, design, plot=TRUE)
+fit <- lmFit(v, design)
+fit <- eBayes(fit)
+all <- topTable(fit, coef=ncol(design), number=10000)
+sig.limma <- all[all$adj.P.Val < 0.01, ]
+fit <- treat(fit, lfc=log2(1.2))
+topTreat(fit, coef=ncol(design))
+
+```
+
+如果分析基因芯片数据，必须好好读懂LIMMA包。
+
+### 不同软件包分析结果比较
+基本上每一个包，我都提取了各种的显著性基因，比较就需要用韦恩图了，但是我偏不 :stuck_out_tongue: 我要用UpSetR.
+```
+library(UpSetR)
+input <- fromList(list(edgeR=rownames(sig.edger), DESeq2=rownames(sig.deseq2), limma=rownames(sig.limma)))
+```
+![](http://oex750gzt.bkt.clouddn.com/17-7-20/6533472.jpg)
+
+感觉limma的结果有点奇怪，有生之年在折腾吧。
+
+## 使用GFOLD进行无重复样本的差异基因分析
 
 
 
-
-
-
-
-## 参考资料
+## 参考文件
 [1] Comparing the normalization methods for the differential analysis of Illumina high-throughput RNA-Seq data
 
 [2] https://www.bioconductor.org/help/workflows/rnaseqGene/
